manifests/ingress-srv.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/app-root: /app
    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  tls:
    - hosts:
        - tinyurl.jackywang.us
      secretName: tinyurl-jackywang-us
  rules:
    - host: tinyurl.jackywang.us
      http:
        paths:
          - path: /app/?(.*)
            pathType: Prefix
            backend:
              service:
                name: frontend-depl
                port:
                  number: 3000
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: gateway-depl
                port:
                  number: 88
